--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>FORTALECENDO CONEXÕES</title>
 </head>
 <body>
-    FORTALECENDO CONEXÕES
+    <b>FORTALECENDO CONEXÕES</b>
 </body>
 </html>
